# cfa-tnd-ve-widget

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: run_pytest.yaml
docs/: primer.md  primer_multiple.md  primer_short.md
tests/: test_tnd.py
tnd/: __init__.py  app.py
