[tool.poetry]
name = "tnd"
version = "0.1.0"
description = "TND VE widget"
authors = ["Scott Olesen <ulp7@cdc.gov>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
streamlit = "^1.41.1"
altair = "^5.5.0"
polars = "^1.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
