[project]
name = "tnd"
version = "0.1.0"
description = "TND VE widget"
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.2.1,<3",
    "streamlit>=1.41.1,<2",
    "altair>=5.5.0,<6",
    "polars>=1.18.0,<2",
]

[dependency-groups]
dev = ["pytest>=8.3.4,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
